Added controllerTests